# check

./: README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  example.yml
src/pytest_prompts/: cli.py  runner.py  snapshot.py
