[project]
name = "pytest-prompts"
version = "0.1.4"
description = "pytest for LLM prompts — tests, regressions, CI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chahine-tech", email = "chahine.benlahcen@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["llm", "pytest", "prompt-engineering", "ci", "anthropic", "claude", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "rich>=13.7",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Chahine-tech/pytest-prompts"
Repository = "https://github.com/Chahine-tech/pytest-prompts"
Issues = "https://github.com/Chahine-tech/pytest-prompts/issues"

[project.scripts]
pytest-prompts = "pytest_prompts.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project.entry-points.pytest11]
pytest_prompts = "pytest_prompts.plugin"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"examples/**" = ["ANN"]

[tool.ty.environment]
python-version = "3.13"
